var current ok && icons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="tasks-container form">
             <form action="" id="form">
-                <input class="pma__input" type="text" id="inputTask">
+                <input class="pma__input" type="text" id="inputTask" autocomplete="off">
                 <input class="pma__add" type="submit" id="addTask" value="Agregar Tarea">
             </form>
         </div>
